Fix ImageText button align

--- a/src/components/ImageText/ImageText.scss
+++ b/src/components/ImageText/ImageText.scss
@@ -132,6 +132,8 @@
 
   &__button {
     display: inline-flex;
+    padding-top: calc(#{spacing(4)} + 0.125rem);
+    padding-bottom: calc(#{spacing(4)} - 0.125rem);
   }
 }
 
